# bevy_animator_controller

./: Cargo.toml  README.md  USAGE.md
assets/: AnimationTestMesh_Simple.glb  base_man.glb  greatsword_idle.ozz  simple_animation01.ozz  simple_skeleton.ozz  skeleton.ozz
examples/: basic.rs  blending_1d.rs  transitions.rs
src/: asset_loader.rs  base.rs  blend_tree.rs  controller.rs  layer.rs  lib.rs  parameters.rs  prelude.rs  state.rs
