[package]
name = "bevy_animator_controller"
version = "0.1.0"
edition = "2024"
exclude = ["dist", "build", "assets"]

[dependencies]
bevy = { version = "0.16", features = ["bevy_gltf"] }
glam = "0.30.9"
ozz-animation-rs = { version = "0.11" }
thiserror = { version = "2" }

[dev-dependencies]
bevy_asset_loader = "0.23"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "blending_1d"
path = "examples/blending_1d.rs"

[[example]]
name = "transitions"
path = "examples/transitions.rs"
